# Bird-Travel-Recommender

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY_AUDIT_REPORT.md  agent_flow.py  complete_enhanced_agent.py  enhanced_agent_flow.py  enhanced_process_results.py  flow.py  leconte_thrasher_guide.md  main.py  mcp_config.json  mcp_config_development.json  mcp_server.py  nodes.py  pyproject.toml  pytest.ini  security_analysis_report.md  test_enhanced_responses.py  test_leconte_thrasher.py  test_mcp_integration.py
.claude/: CLAUDE.md  settings.local.json
config/: .auth_secret  .env.example  auth_config.example.json  auth_config.json
docs/: CHANGELOG.md  Digital Conservation - eBird API Tutorial.md  FILE_CLEANUP_PLAN.md  General Notes on PocketFlow Travel Birding.md  REFACTORING_PLAN.md  api-reference.md  architecture.md  configuration.md  design.md  developer-guide.md  eBird API Deep Research Report.md  examples-enhanced.md  examples.md  high-level-plan.md  performance.md  troubleshooting.md  user-guide.md
docs/planning/: ebird-api-expansion-plan.md
scripts/: check_api_keys.py  deploy_mcp.py  mcp_config_development.json  merge_mcp_config.py  test_leconte_thrasher.py  test_merge.py  test_new_endpoints.py
src/bird_travel_recommender/: __init__.py  constants.py  flow.py  flow_unified.py  main.py  nodes.py
src/bird_travel_recommender/core/: __init__.py
src/bird_travel_recommender/mcp/: __init__.py  auth.py  modern_server.py  rate_limiting.py  server.py  server_modular.py  (+2 more)
tests/: README.md  conftest.py  test_end_to_end_real.py  test_fetch_sightings_node.py  test_filter_constraints_node.py  test_integration.py  test_unified_architecture.py  test_validate_species_node.py
tests/integration/: test_enhanced_error_handling.py  test_mcp_tools_comprehensive.py  test_mcp_tools_expansion.py
tests/migration/: __init__.py  test_ebird_client_compatibility.py
tests/unit/: __init__.py  conftest.py  test_auth_rate_limiting.py  test_ebird_api_expansion.py  test_end_to_end_real.py  test_enhanced_nlp.py  test_enhanced_responses.py  test_fetch_sightings.py  test_fetch_sightings_node.py  test_filter_constraints.py  test_filter_constraints_node.py  test_integration.py  test_mcp_integration.py  test_mcp_pocketflow_parity.py  test_security_validation.py  test_utils.py  test_validate_species.py  test_validate_species_node.py
utils/: call_llm.py  enhanced_nlp.py  geo_utils.py  response_formatter.py  route_optimizer.py
(+100 files in other folders)
