[project]
name = "travel-birding"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.4",
    "openai>=1.86.0",
    "pocketflow>=0.0.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
